[package]
name = "BrickHillCrossoverLauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_8"] }
tl = "0.7.7"
base64 = "0.21.2"
serde_json = "1.0.96"
ureq = "2.6.2"
